--- a/style.css
+++ b/style.css
@@ -27,22 +27,20 @@ header{
 
 .logo img{
     height:55px;
-    margin-left:50px;
+    margin-left:40px;
     margin-top:20px;
 }
 
 .nav-links{
-    margin-left:600px;
+    margin-left:500px;
 }
 
 .nav-links li{
     display: inline-flex;
-    position: relative;
     margin-top:28px;
-    justify-content: space-evenly;
-    width:140px;
+    justify-content: space-around;
+    width:160px;
     font-size:18px;
-    margin-right: auto;
 }
 .nav-links li a:hover{
     color:orangered;
@@ -56,20 +54,20 @@ header{
 
 
   .nav-links li:hover .dropdown{
-    display: inline-block;
+    display: block;
     background-color: burlywood;
     color: blue;
-    margin-top:30px;
+    margin-top: 40px;
     margin-left:-128px;
-    justify-content:space-between;
-    text-align: center;
     font-family: sans-serif;
+    text-align: center;
+    justify-content: space-evenly;
 
 }
 
 .dropdown ul li {
-    width:20%;
-    padding: 5px;
+    width:100%;
+    padding:2px;
 }
 
 .dropdown li a:hover{
@@ -85,19 +83,21 @@ header{
     display:inline-block;
     background-color: burlywood;
     color: blue;
-    margin-top:30px;
-    margin-left:-135px;
-    justify-content:space-between;
-    text-align: center;
+    margin-top:40px;
+    margin-left:-125px;
     font-family: sans-serif;
+    text-align: center;
+    justify-content: space-evenly;
 
 }
+
 
 
 .dropdown-menu ul li{
-    width:20%;
-    padding: 5px;
+    width:100%;
+    padding:2px;
 }
+
 .dropdown-menu li a:hover{
     color: brown;
 }
@@ -109,10 +109,6 @@ header{
     padding-top: 10px;
     padding-bottom: 10px;
     background-color: burlywood;
-    border-right: auto;
-    border-left: auto;
-    border-top: auto;
-    border-bottom: auto;
 }
 
 
@@ -125,10 +121,6 @@ header{
     padding-top: 10px;
     padding-bottom: 10px;
     background-color: burlywood;
-    border-right: auto;
-    border-left: auto;
-    border-top: auto;
-    border-bottom: auto;
 
 
 }
@@ -140,10 +132,6 @@ header{
     padding-top: 10px;
     padding-bottom: 10px;
     background-color: burlywood;
-    border-right: auto; 
-    border-left: auto;
-    border-top: auto;
-    border-bottom: auto;
 
 }
 
@@ -155,10 +143,7 @@ header{
     padding-top: 10px;
     padding-bottom: 10px;
     background-color: burlywood;
-    border-right: auto;
-    border-left: auto;
-    border-top: auto;
-    border-bottom: auto;
+
 }
 
 
